[tool.poetry]
name = "igntpview"
version = "0.1.0"
description = "Corrector Seeker"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
typer = "^0.4.1"
appdirs = "^1.4.4"
rich = "^12.4.1"
lxml = "^4.8.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
igntpview = "igntpview.main:app"

